jdk 버젼 1.8 로 낮춤, httpUtil 을 apache httpclient 사용하도록 수정, 기타 소스 정리